# REALLOCATE_AI

./: .gitignore  4_modelling.ipynb  README.md  h3_barcelona_clipped.parquet  pyproject.toml
data/Dummy/: pilot_kpis.json
data/Location/: .~lock.pilot_static_data.csv#  pilot_static_data.csv
data/Schema/: schema.py
data/processed/: barcelona_h3_res10_aggregated.parquet  barcelona_h3_res10_building_aggregated.parquet  barcelona_h3_res10_landuse_aggregated.parquet  barcelona_h3_res10_model_features.parquet  barcelona_h3_res10_ndvi_aggregated.parquet  barcelona_h3_res10_opendata_aggregated.parquet  barcelona_h3_res10_poi.parquet  landuse.parquet
data/raw/: 2023_atles_renda_bruta_llar.csv
notebooks/: 01_make_h3.ipynb  022_luca_data-processing_select-variables-modelling.ipynb  02_demographic.ipynb  02_overture.ipynb  02_satellite.ipynb  03_5_dimensionality_reduction.ipynb  03_aggregate_into_h3.ipynb  04_modelling.ipynb  05_cluster categories.ipynb  3_aggregate_into_h3.ipynb  4_modelling.ipynb  KPI_OSMNX.ipynb  Template.ipynb  dummy_data.ipynb  ndvi.ipynb  overture.ipynb  overture_places_categories.csv
notebooks/old_versions/: ndvi.ipynb
src/: config.py  data_generation.py  schema.py
