[project]
name = "reallocate-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "pandera",
    "pydantic",
    "geopandas>=1.1.1",
    "osmnx>=2.0.6",
    "duckdb",
    "xarray",
    "rasterio",
    "rioxarray",
    "planetary-computer",
    "pystac-client",
    "stackstac",
    "pyarrow>=22.0.0",
    "h3>=4.3.1",
    "sentence-transformers>=5.1.2",
]
